<resources>
    <string name="app_name">Hati-Hati</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="add_location">Add Location</string>
    <string name="submit">submit</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="latitude">Latitude</string>
    <string name="email">email</string>
    <string name="emailc">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="name">Name</string>
    <string name="ChatActivity">ChatActivity</string>
    <string name="aye_yo">aye yo</string>
    <string name="my_cart">My Cart</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="pred">pred</string>
    <string name="tambah_laporan">Tambah Laporan</string>
    <string name="lokasi_kejadian">Lokasi Kejadian</string>
    <string name="tambah_lokasi_kejadian">Tambah Lokasi Kejadian</string>
    <string name="tambah_lokasi">Tambah Lokasi</string>
    <string name="lat">Latitude :</string>
    <string name="lon">Longitude :</string>
    <string name="jenis_kejahatan">Jenis Kejahatan</string>
    <string name="pilih_jenis_kejahatan">Pilih Jenis Kejahatan</string>
    <string name="asault">ASAULT</string>
    <string name="ASSAULT">ASSAULT</string>
    <string name="vehicle_n_theft">VEHICLE \n THEFT</string>
    <string name="sex_n_offense">SEX \n OFFENSE</string>
    <string name="lainnya">Lainnya</string>
    <string name="tulis_kejahatan_disini">Tulis Kejahatan Disini</string>
    <string name="Lokasi">Lokasi :</string>
    <string name="chatbothint">Kirim Pesan Seperti Hi atau Halo</string>
    <string name="hati_bot">Hati-Bot</string>
    <string name="you">Anda</string>
    <string name="gambar">gambar</string>
    <string name="nama">Nama</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>