<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReportActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_laporan"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/actual_Lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/Longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toEndOf="@+id/Latitude"
        app:layout_constraintTop_toBottomOf="@+id/addLocation"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/actual_Lon"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toEndOf="@+id/Longitude"
        app:layout_constraintTop_toBottomOf="@+id/actual_Lat"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/actual_Loc"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/txt_Lokasi"
        app:layout_constraintTop_toBottomOf="@+id/actual_Lon"
        app:layout_constraintVertical_bias="0.52" />

    <View
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:background="@color/cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <View
        android:id="@+id/view"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:background="@color/cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Lokasi"
        app:layout_constraintVertical_bias="0.026" />

    <View
        android:id="@+id/view2"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:background="@color/cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherEditText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lokasi_kejadian"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kejahatan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/tambah_lokasi_kejadian"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_jenis_kejahatan"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/addLocation"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tambah_lokasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/addReport"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/tambah_laporan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherEditText"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/btn_other"
        style="?attr/materialButtonOutlinedStyle"
        android:textColor="@color/black"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/lainnya"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_vectheft"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLocation"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/txt_Lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lokasi"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Longitude"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lon"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Latitude"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/btn_assault"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="111dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:drawableTop="@drawable/assaultmark"
        android:text="@string/ASSAULT"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/btn_vectheft"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="111dp"
        android:layout_height="140dp"
        android:layout_marginStart="20dp"
        android:drawableTop="@drawable/vectheft"
        android:text="@string/vehicle_n_theft"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_assault"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/btn_sexoffense"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="111dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:drawableTop="@drawable/sexoffensemark"
        android:text="@string/sex_n_offense"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/btn_vectheft"
        app:layout_constraintTop_toTopOf="@+id/btn_vectheft"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/otherEditText"
        android:layout_width="380dp"
        android:layout_height="51dp"
        android:hint="@string/tulis_kejahatan_disini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_other"
        app:layout_constraintVertical_bias="0.132" />


</androidx.constraintlayout.widget.ConstraintLayout>